k8s/application/config-server-deployment.yaml



apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server-app
spec:
  selector:
    matchLabels:
      app: config-server-app
  template:
    metadata:
      labels:
        app: config-server-app
    spec:
      containers:
      - name: config-server-app
        image: basantanembang10/configserver:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 9296
        
        # env:
        #   - name: EUREKA_SERVER_ADDRESS    
        #     valueFrom:
        #       configMapKeyRef:
        #         name: eureka-cmap
        #         key: eureka_server_address
        
        # readinessProbe:
        #   httpGet:
        #     path: /actuator/health
        #     port: 9296
        #   initialDelaySeconds: 65
        #   periodSeconds: 5
        #   failureThreshold: 3
        #   successThreshold: 1   
     

     
---

apiVersion: v1
kind: Service
metadata:
  name: config-server-svc
spec:
  selector:
    app: config-server-app
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 9296
