k8s/application/notify-service-deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: notify-service-app
spec:
  selector:
    matchLabels:
      app: notify-service-app
  template:
    metadata:
      labels:
        app: notify-service-app
    spec:
      containers:
      - name: notify-service-app
        image: basantanembang10/notifyservice:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8087
---

apiVersion: v1
kind: Service
metadata:
  name: notify-service-svc
spec:
  selector:
    app: notify-service-app
  ports:
  - port: 80
    targetPort: 8087
