k8s/application/order-service-deployment.yaml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service-app
  template:
    metadata:
      labels:
        app: order-service-app
    spec:
      containers:
      - name: order-service-app
        image: basantanembang10/orderservice:latest
        ports:
        - containerPort: 8081

        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8081
          initialDelaySeconds: 200
          periodSeconds: 5
          failureThreshold: 3
          successThreshold: 1    

          
---

apiVersion: v1
kind: Service
metadata:
  name: order-service-svc
spec:
  selector:
    app: order-service-app
  ports:
  - port: 80 
    targetPort: 8081
