k8s/application/service-registry-statefull.yaml

---

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
spec:
  selector:
    matchLabels:
      app: eureka
  serviceName: "eureka"
  replicas: 1
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image: basantanembang10/serviceregistry:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8761
        
        
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8761
          initialDelaySeconds: 200
          periodSeconds: 5
          failureThreshold: 3
          successThreshold: 1      



---

apiVersion: v1
kind: Service
metadata:
  name: eureka
  #name: eureka-headless
spec:
  clusterIP: None
  selector:
    app: eureka
  ports:
  - port: 8761
    name: eureka


---

apiVersion: v1
kind: Service
metadata:
  name: eureka-lb
spec:
  type: NodePort
  selector:
    app: eureka
  ports:
  - port: 80
    targetPort: 8761
