k8s/application/api-gateway-deployment.yaml


---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway-app
  template:
    metadata:
      labels:
        app: api-gateway-app
     
    spec:
      
      containers:
      - name: api-gateway-app
        image: basantanembang10/apigateway:latest
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 3000
          initialDelaySeconds: 200
          periodSeconds: 5
          failureThreshold: 3
          successThreshold: 1   

       
# ---

# apiVersion: v1
# kind: Service
# metadata:
#   name: api-gateway-svc
# spec:
#   type: NodePort     #LoadBalancer
#   selector:
#     app: api-gateway-app
#   ports:
#   - port: 80
#     targetPort: 3000
#     nodePort: 30001   #
    



#LET`S IMPLEMENT INGRESS-SERVICE`
---

apiVersion: v1
kind: Service
metadata:
  name: api-gateway-svc
spec:
  selector:
    app: api-gateway-app
  ports:
  - port: 80
    targetPort: 3000


---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    
spec:
  ingressClassName: nginx
  rules:
  - host: api-gateway-local.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-gateway-svc
            port: 
              number: 80
